update for GET and PUT merchants
