# controllers/merchantController.go
@@ -16,12 +16,12 @@ import (
 // @Summary create a complete merchant.
 // @Description create a complete merchant with the address of an existing user.
 // @Tags Merchant
-// @Param Body body wmodels.MerchantCreateInput true "Insert new merchant info. only name and country are required"
+// @Param Body body wmodels.MerchantInput true "Insert new merchant info. only name and country are required"
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_jwt_token_here>'"
 // @Security BearerToken
 // @Produce json
 // @Success 201 {object} utils.RespWithData{data=wmodels.IDTemplate}
-// @Router /dev/users/{id}/address [post]
+// @Router /merchants [post]
 func CreateMerchant(c *gin.Context) {
 	db := c.MustGet("db").(*gorm.DB)
 
@@ -33,7 +33,7 @@ func CreateMerchant(c *gin.Context) {
 		return
 	}
 
-	var input wmodels.MerchantCreateInput
+	var input wmodels.MerchantInput
 
 	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
@@ -159,8 +159,47 @@ func GetMerchantById(c *gin.Context) {
 }
 
 // Register godoc
+// @Summary Get user's merchant.
+// @Description Get user's merchant.
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_jwt_token_here>'"
+// @Security BearerToken
+// @Tags Merchant
+// @Produce json
+// @Success 200 {object} utils.RespWithData{data=wmodels.MerchantDetailsOutput}
+// @Router /merchants/my [GET]
+func GetMyMerchant(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+
+	uid, err := token.ExtractUID(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	// look up merchant
+	merchant := models.Merchant{}
+	merchant.AdminId = uid
+
+	data := &wmodels.MerchantDetailsOutput{}
+	if err := merchant.GetMy(db, data); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, utils.RespWithData{
+		Status:  "success",
+		Message: "berhasil mendapatkan merchant anda",
+		Data:    *data,
+	})
+}
+
+// Register godoc
 // @Summary Delete an existing merchant.
-// @Description Delete an existing merchant.
+// @Description Delete an existing merchant. This revert user to customer
 // @Param id path uint true "merchant id"
 // @Tags Merchant
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_jwt_token_here>'"
@@ -214,8 +253,27 @@ func DeleteMerchantById(c *gin.Context) {
 	})
 }
 
+// Register godoc
+// @Summary update an existing merchant.
+// @Description update merchant information field of an existing merchant.
+// @Tags Merchant
+// @Param id path uint true "merchant id"
+// @Param Body body wmodels.MerchantInputNoBinding true "Update desired field"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_jwt_token_here>'"
+// @Security BearerToken
+// @Produce json
+// @Success 200 {object} utils.RespWithData{data=wmodels.MerchantInputNoBinding}
+// @Router /merchants/{id} [put]
 func PutMerchantById(c *gin.Context) {
 	db := c.MustGet("db").(*gorm.DB)
+
+	uid, err := token.ExtractUID(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
 
 	var merchantId uint = 0
 	if v := c.Param("id"); v == "" {
@@ -231,10 +289,29 @@ func PutMerchantById(c *gin.Context) {
 		}
 	}
 
-	var merchant models.Merchant
+	var input wmodels.MerchantInputNoBinding
+
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	merchant := &models.Merchant{
+		AdminId: uid,
+		Name:    input.Name,
+	}
 	merchant.ID = merchantId
 
-	if err := merchant.Put(db); err != nil {
+	maddr := &models.MerchantAddress{
+		City:                input.City,
+		OfflineStoreAddress: input.AddressLine,
+		CountryID:           input.Country,
+	}
+	maddr.MerchantID = merchantId
+
+	if err := merchant.Put(db, maddr); err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": err.Error(),
 		})
@@ -244,6 +321,6 @@ func PutMerchantById(c *gin.Context) {
 	c.JSON(http.StatusOK, utils.RespWithData{
 		Status:  "success",
 		Message: "berhasil memperbarui merchant",
-		Data:    wmodels.MerchantOutput{},
+		Data:    input,
 	})
 }
