# models/sql/merchant.go
@@ -2,6 +2,8 @@ package models
 
 import (
 	wmodels "anya-day/models/web"
+	"fmt"
+	"log"
 	"strconv"
 	"strings"
 
@@ -19,6 +21,14 @@ type (
 )
 
 func CreateMerchant(db *gorm.DB, m *Merchant, ma *MerchantAddress) error {
+	r := Role{}
+
+	db.Where(&Role{UserID: m.AdminId}).First(&r)
+
+	if r.Name == "customer" {
+		return fmt.Errorf("you must have merchant role first before creating merchant, please update your profile first with [PATCH] to /user/role")
+	}
+
 	if err := db.Create(m).Error; err != nil {
 		return err
 	}
@@ -60,6 +70,24 @@ func GetAll(db *gorm.DB, filter *wmodels.MerchantFilter, m []Merchant, mout *[]w
 	return nil
 }
 
+func (m *Merchant) GetMy(db *gorm.DB, data *wmodels.MerchantDetailsOutput) error {
+	if err := db.
+		Model(&Merchant{}).
+		Where("admin_id = ?", m.AdminId).
+		Find(m).
+		Error; err != nil {
+		return fmt.Errorf("you have not a merchant yet")
+	}
+
+	log.Printf("get merchant info: %v\n", *m)
+
+	if err := m.GetById(db, data); err != nil {
+		return err
+	}
+
+	return nil
+}
+
 func (m *Merchant) GetById(db *gorm.DB, data *wmodels.MerchantDetailsOutput) error {
 	row, err := db.
 		Table("merchants m").
@@ -79,6 +107,8 @@ func (m *Merchant) GetById(db *gorm.DB, data *wmodels.MerchantDetailsOutput) err
 		if err != nil {
 			return err
 		}
+	} else {
+		return fmt.Errorf("kami tidak memiliki data merchant anda")
 	}
 
 	data.ID = mout.ID
@@ -91,10 +121,36 @@ func (m *Merchant) GetById(db *gorm.DB, data *wmodels.MerchantDetailsOutput) err
 }
 
 func (m *Merchant) Delete(db *gorm.DB) error {
-	return db.Unscoped().Delete(m).Error
+	if err := db.Unscoped().Delete(m).Error; err != nil {
+		return err
+	}
 
+	if err := db.
+		Model(&Role{}).
+		Where("user_id = ?", m.AdminId).
+		Updates(&Role{Name: "customer"}).
+		Error; err != nil {
+		return err
+	}
+
+	return nil
 }
 
-func (m *Merchant) Put(db *gorm.DB) error {
+func (m *Merchant) Put(db *gorm.DB, addr *MerchantAddress) error {
+
+	if err := db.Model(m).Updates(m).Error; err != nil {
+		return err
+	}
+
+	err := db.
+		Model(&MerchantAddress{}).
+		Where("merchant_id = ?", addr.MerchantID).
+		Updates(addr).
+		Error
+
+	if err != nil {
+		return err
+	}
+
 	return nil
 }
